## ã‚·ãƒ§ãƒƒãƒ—ç”»é¢
extends Control

# å£²å´ä¾¡æ ¼
const SELL_PRICES = {
	"C": 5,
	"N": 10,
	"S": 50,
	"R": 100
}

@onready var gold_label = $VBoxContainer/Header/GoldLabel
@onready var purchase_button = $VBoxContainer/ModeButtons/PurchaseButton
@onready var sell_button = $VBoxContainer/ModeButtons/SellButton

# ã‚¬ãƒãƒ£ã‚»ã‚¯ã‚·ãƒ§ãƒ³
@onready var gacha_section = $VBoxContainer/ContentPanel/GachaSection
@onready var single_button = $VBoxContainer/ContentPanel/GachaSection/ButtonsHBox/SingleGachaButton
@onready var multi_button = $VBoxContainer/ContentPanel/GachaSection/ButtonsHBox/MultiGachaButton
@onready var multi_100_button = $VBoxContainer/ContentPanel/GachaSection/ButtonsHBox/Multi100GachaButton
@onready var result_label = $VBoxContainer/ContentPanel/GachaSection/ResultSection/ResultLabel
@onready var result_grid = $VBoxContainer/ContentPanel/GachaSection/ResultSection/ScrollContainer/ResultGrid

# å£²å´ã‚»ã‚¯ã‚·ãƒ§ãƒ³
@onready var sell_section = $VBoxContainer/ContentPanel/SellSection
@onready var manual_sell_button = $VBoxContainer/ContentPanel/SellSection/SellButtonsHBox/ManualSellButton
@onready var auto_sell_button = $VBoxContainer/ContentPanel/SellSection/SellButtonsHBox/AutoSellButton
@onready var sell_result_label = $VBoxContainer/ContentPanel/SellSection/SellResultLabel
@onready var manual_sell_panel = $VBoxContainer/ContentPanel/SellSection/ManualSellPanel
@onready var card_grid = $VBoxContainer/ContentPanel/SellSection/ManualSellPanel/CardScrollContainer/CardGrid

@onready var back_button = $VBoxContainer/Footer/BackButton

var gacha_system: Node

func _ready():
	# ã‚¬ãƒãƒ£ã‚·ã‚¹ãƒ†ãƒ ã‚’åˆæœŸåŒ–
	gacha_system = preload("res://scripts/gacha_system.gd").new()
	add_child(gacha_system)
	
	# ãƒ¢ãƒ¼ãƒ‰ãƒœã‚¿ãƒ³æ¥ç¶š
	purchase_button.pressed.connect(_on_purchase_mode)
	sell_button.pressed.connect(_on_sell_mode)
	
	# ã‚¬ãƒãƒ£ãƒœã‚¿ãƒ³æ¥ç¶š
	single_button.pressed.connect(_on_single_gacha)
	multi_button.pressed.connect(_on_multi_gacha)
	multi_100_button.pressed.connect(_on_multi_100_gacha)
	
	# å£²å´ãƒœã‚¿ãƒ³æ¥ç¶š
	manual_sell_button.pressed.connect(_on_manual_sell)
	auto_sell_button.pressed.connect(_on_auto_sell)
	
	back_button.pressed.connect(_on_back)
	
	# åˆæœŸçŠ¶æ…‹ï¼šè³¼å…¥ãƒ¢ãƒ¼ãƒ‰
	_on_purchase_mode()
	_update_gold_display()

func _update_gold_display():
	gold_label.text = "ğŸ’° " + str(GameData.player_data.profile.gold) + " G"

# ==================== ãƒ¢ãƒ¼ãƒ‰åˆ‡æ›¿ ====================

func _on_purchase_mode():
	gacha_section.visible = true
	sell_section.visible = false
	purchase_button.disabled = true
	sell_button.disabled = false

func _on_sell_mode():
	gacha_section.visible = false
	sell_section.visible = true
	purchase_button.disabled = false
	sell_button.disabled = true
	manual_sell_panel.visible = false
	sell_result_label.text = ""

# ==================== ã‚¬ãƒãƒ£ ====================

func _on_single_gacha():
	var result = gacha_system.pull_single()
	if result.success:
		_show_gacha_result(result.cards)
	else:
		result_label.text = result.error
	_update_gold_display()

func _on_multi_gacha():
	var result = gacha_system.pull_multi_10()
	if result.success:
		_show_gacha_result(result.cards)
	else:
		result_label.text = result.error
	_update_gold_display()

func _on_multi_100_gacha():
	var result = gacha_system.pull_multi_100()
	if result.success:
		_show_gacha_result(result.cards)
	else:
		result_label.text = result.error
	_update_gold_display()

func _show_gacha_result(cards: Array):
	# å‰å›ã®çµæœã‚’ã‚¯ãƒªã‚¢
	for child in result_grid.get_children():
		child.queue_free()
	
	# ãƒ¬ã‚¢ãƒªãƒ†ã‚£åˆ¥ã«ã‚«ã‚¦ãƒ³ãƒˆ
	var rarity_count = {"C": 0, "N": 0, "S": 0, "R": 0}
	
	# ã‚«ãƒ¼ãƒ‰è¡¨ç¤º
	for card in cards:
		var card_panel = _create_card_display(card)
		result_grid.add_child(card_panel)
		
		var rarity = card.get("rarity", "N")
		if rarity_count.has(rarity):
			rarity_count[rarity] += 1
	
	result_label.text = "çµæœ: CÃ—%d  NÃ—%d  SÃ—%d  RÃ—%d" % [rarity_count["C"], rarity_count["N"], rarity_count["S"], rarity_count["R"]]

func _create_card_display(card: Dictionary) -> Control:
	var panel = PanelContainer.new()
	panel.custom_minimum_size = Vector2(120, 80)
	
	var vbox = VBoxContainer.new()
	panel.add_child(vbox)
	
	var name_label = Label.new()
	name_label.text = card.get("name", "???")
	name_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	name_label.add_theme_font_size_override("font_size", 14)
	vbox.add_child(name_label)
	
	var rarity_label = Label.new()
	var rarity = card.get("rarity", "N")
	rarity_label.text = "[" + rarity + "]"
	rarity_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	
	# ãƒ¬ã‚¢ãƒªãƒ†ã‚£ã§è‰²åˆ†ã‘ï¼ˆC < N < S < Rï¼‰
	match rarity:
		"R":
			rarity_label.modulate = Color(1.0, 0.8, 0.0)  # é‡‘è‰²ï¼ˆæœ€é«˜ï¼‰
		"S":
			rarity_label.modulate = Color(0.6, 0.3, 1.0)  # ç´«è‰²
		"N":
			rarity_label.modulate = Color(0.3, 0.6, 1.0)  # é’è‰²
		"C":
			rarity_label.modulate = Color(0.7, 0.7, 0.7)  # ç°è‰²ï¼ˆæœ€ä½ï¼‰
	
	vbox.add_child(rarity_label)
	
	return panel

# ==================== å£²å´ ====================

func _on_manual_sell():
	manual_sell_panel.visible = true
	_populate_sellable_cards()

func _populate_sellable_cards():
	# ã‚«ãƒ¼ãƒ‰ã‚°ãƒªãƒƒãƒ‰ã‚’ã‚¯ãƒªã‚¢
	for child in card_grid.get_children():
		child.queue_free()
	
	# æ‰€æŒã‚«ãƒ¼ãƒ‰ã‚’è¡¨ç¤º
	for card in CardLoader.all_cards:
		var card_id = card.get("id", 0)
		var count = UserCardDB.get_card_count(card_id)
		
		if count > 0:
			var card_button = _create_sell_card_button(card, count)
			card_grid.add_child(card_button)

func _create_sell_card_button(card: Dictionary, count: int) -> Button:
	var button = Button.new()
	button.custom_minimum_size = Vector2(180, 120)
	
	var card_id = card.get("id", 0)
	var card_name = card.get("name", "???")
	var rarity = card.get("rarity", "N")
	var price = SELL_PRICES.get(rarity, 10)
	
	# ãƒ‡ãƒƒã‚­ä½¿ç”¨æšæ•°ã‚’å–å¾—
	var deck_usage = GameData.get_card_usage_in_decks(card_id)
	var sellable = count - deck_usage
	
	button.text = "%s\n[%s] %dæš" % [card_name, rarity, count]
	if deck_usage > 0:
		button.text += " (ãƒ‡ãƒƒã‚­:%d)" % deck_usage
	button.text += "\nå£²å€¤: %dG" % price
	
	button.add_theme_font_size_override("font_size", 14)
	
	# è‰²åˆ†ã‘ï¼ˆC < N < S < Rï¼‰
	if sellable <= 0:
		# å£²å´ä¸å¯ï¼ˆãƒ‡ãƒƒã‚­ä½¿ç”¨ä¸­ï¼‰
		button.modulate = Color(0.5, 0.5, 0.5)
		button.disabled = true
	else:
		match rarity:
			"R":
				button.modulate = Color(1.0, 0.9, 0.7)  # é‡‘è‰²
			"S":
				button.modulate = Color(0.9, 0.8, 1.0)  # ç´«è‰²
			"N":
				button.modulate = Color(0.8, 0.9, 1.0)  # é’è‰²
			"C":
				button.modulate = Color(0.9, 0.9, 0.9)  # ç°è‰²
	
	button.pressed.connect(_on_sell_card.bind(card_id, card_name, rarity, price))
	
	return button

func _on_sell_card(card_id: int, card_name: String, rarity: String, price: int):
	var count = UserCardDB.get_card_count(card_id)
	if count <= 0:
		sell_result_label.text = "ã“ã®ã‚«ãƒ¼ãƒ‰ã¯æ‰€æŒã—ã¦ã„ã¾ã›ã‚“"
		return
	
	# ãƒ‡ãƒƒã‚­ä½¿ç”¨æšæ•°ã‚’ç¢ºèª
	var deck_usage = GameData.get_card_usage_in_decks(card_id)
	var sellable = count - deck_usage
	
	if sellable <= 0:
		sell_result_label.text = "âš ï¸ %s ã¯ãƒ‡ãƒƒã‚­ã«%dæšä½¿ç”¨ä¸­ã®ãŸã‚å£²å´ã§ãã¾ã›ã‚“" % [card_name, deck_usage]
		return
	
	# 1æšå£²å´
	UserCardDB.remove_card(card_id, 1)
	GameData.player_data.profile.gold += price
	GameData.save_to_file()
	UserCardDB.flush()
	
	sell_result_label.text = "%s ã‚’1æšå£²å´ã—ã¾ã—ãŸ (+%dG)" % [card_name, price]
	_update_gold_display()
	_populate_sellable_cards()

func _on_auto_sell():
	var total_sold = 0
	var total_gold = 0
	
	for card in CardLoader.all_cards:
		var card_id = card.get("id", 0)
		var count = UserCardDB.get_card_count(card_id)
		
		# ãƒ‡ãƒƒã‚­ä½¿ç”¨æšæ•°ã‚’å–å¾—
		var deck_usage = GameData.get_card_usage_in_decks(card_id)
		
		# å£²å´å¯èƒ½æšæ•° = æ‰€æŒæ•° - ãƒ‡ãƒƒã‚­ä½¿ç”¨æ•°
		var sellable = count - deck_usage
		
		# 4æšã‚’è¶…ãˆãŸåˆ†ã‚’å£²å´ï¼ˆãŸã ã—ãƒ‡ãƒƒã‚­ä½¿ç”¨åˆ†ã¯é™¤å¤–ï¼‰
		if sellable > 4:
			var sell_count = sellable - 4
			var rarity = card.get("rarity", "N")
			var price = SELL_PRICES.get(rarity, 10)
			var gold_earned = price * sell_count
			
			UserCardDB.remove_card(card_id, sell_count)
			total_sold += sell_count
			total_gold += gold_earned
	
	if total_sold > 0:
		GameData.player_data.profile.gold += total_gold
		GameData.save_to_file()
		UserCardDB.flush()
		sell_result_label.text = "è‡ªå‹•å£²å´å®Œäº†: %dæšå£²å´ (+%dG)" % [total_sold, total_gold]
	else:
		sell_result_label.text = "å£²å´å¯¾è±¡ã®ã‚«ãƒ¼ãƒ‰ãŒã‚ã‚Šã¾ã›ã‚“ï¼ˆãƒ‡ãƒƒã‚­ä½¿ç”¨åˆ†+4æšä»¥ä¸‹ï¼‰"
	
	_update_gold_display()

func _on_back():
	get_tree().change_scene_to_file("res://scenes/MainMenu.tscn")
